# ukiel

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.yml  ukield.example.toml
.claude/skills/verify/: SKILL.md
.claude/skills/write-plan/: SKILL.md  template.md
bench/: README.md  bench.sh  catalog-matrix.sh  manifest-issue-0011.sh  report.py  run-issue-0011.sh
bench/clickhouse/config.d/: user_files.xml
bench/manifests/: issue-0011.json
bench/queries/clickbench/: ADAPTATIONS.md  create-clickhouse-official.sql  queries-clickhouse-official.sql  queries-clickhouse.sql  queries-upstream.sql  queries.sql
bench/queries/jsonbench/: ADAPTATIONS.md  queries-upstream.sql  queries.sql
crates/ukiel-catalog/: Cargo.toml
crates/ukiel-catalog/migrations/: 0001_init.sql  0002_ingest_offsets.sql  0003_placement_and_cursors.sql  0004_gc.sql  0005_pending_objects.sql  0006_target_file_bytes.sql  0007_partition_probe_index.sql  0008_compaction_leases.sql  0009_compaction_candidate_index.sql  0010_compaction_lease_generation_seq.sql  0011_operation_fingerprints.sql  0012_part_packing_keys.sql
crates/ukiel-catalog/src/: commit.rs  cursors.rs  error.rs  error_tests.rs  faults.rs  feed.rs  gc.rs  leases.rs  lib.rs  offsets.rs  parts.rs  tables.rs
crates/ukiel-catalog/tests/: catalog_test.rs
crates/ukiel-catalog/tests/common/: mod.rs
crates/ukiel-compactor/: Cargo.toml
crates/ukiel-compactor/src/: compactor.rs  deletion.rs  error.rs  lib.rs  merge.rs  rewrite.rs
crates/ukiel-compactor/tests/: compactor_test.rs  deletion_test.rs
crates/ukiel-core/: Cargo.toml
crates/ukiel-core/src/: commit.rs  ids.rs  keyfilter.rs  lib.rs  operation.rs  part.rs  ready.rs  schema.rs  sorting.rs  stats.rs  table.rs
crates/ukiel-e2e/: Cargo.toml
crates/ukiel-e2e/src/: fault_proxy.rs  lib.rs
crates/ukiel-e2e/tests/: s10_catalog_recovery.rs  s11_ambiguous_mutation.rs  s1_multi_tenant.rs  s2_crash_resume.rs  s3_freshness.rs  s4_poison_stream.rs  s5_scale.rs  s6_compaction_equivalence.rs  s7_key_deletion.rs  s8_gc_hygiene.rs  s9_compaction_failover.rs  smoke.rs
crates/ukiel-expr/: Cargo.toml
crates/ukiel-expr/src/: lib.rs
crates/ukiel-gc/: Cargo.toml
crates/ukiel-gc/src/: lib.rs
crates/ukiel-gc/tests/: gc_test.rs
crates/ukiel-ingest/: Cargo.toml
crates/ukiel-ingest/src/: assignment.rs  config.rs  consumer.rs  error.rs  flusher.rs  lib.rs  writer.rs
crates/ukiel-ingest/tests/: consumer_test.rs  flusher_test.rs
crates/ukiel-query/: Cargo.toml
crates/ukiel-query/src/: cache.rs  context.rs  error.rs  lib.rs  metadata_cache.rs  provider.rs  results.rs  server.rs  view_types.rs
crates/ukiel-query/tests/: cache_test.rs  perf_smoke.rs  query_test.rs  server_test.rs
crates/ukield/: Cargo.toml
crates/ukield/src/: bootstrap.rs  collector.rs  config.rs  health.rs  lib.rs  main.rs  metrics.rs  recovery.rs  run.rs  supervisor.rs
crates/ukield/tests/: bootstrap_test.rs  collector_test.rs  health_metrics_test.rs  server_test.rs  startup_recovery_test.rs
docs/issues/: 0001-query-endpoint-unauthenticated-namespace.md  0002-gc-grace-vs-query-duration.md  0003-concurrent-ingest-writers-duplicate.md  0004-unbounded-event-time.md  0005-finalization-whole-partition-memory.md  0006-backpressure-probe-per-day-queries.md  0007-partition-probes-unindexed.md  0008-flat-slowdown-band.md  0009-guardrail-default-triplication.md  0010-aggregates-rescan-what-the-catalog-already-knows.md  0011-million-tenant-catalog-proof-uses-small-fixture.md  0012-compaction-candidate-window-can-starve-tail-partitions.md  0013-compaction-lease-generation-resets-after-release.md  0014-live-parts-pruned-ships-the-fan-out-the-bitmap-then-discards.md  README.md  TEMPLATE.md  generate-index.sh
docs/notes/: 2026-07-06-columnar-results.md  2026-07-06-lsm-hierarchy.md  2026-07-06-parquet-read-performance.md  2026-07-06-pipelines.md  2026-07-07-auth.md  2026-07-07-coalescing-retention.md  2026-07-07-egress.md  2026-07-07-feed-horizon.md  2026-07-07-ingest-scaleout.md  2026-07-07-ingest-sort-by-sort-key.md  2026-07-07-metrics-p2.md  2026-07-08-macro-perf.md  2026-07-08-plan17-18-review.md  2026-07-08-streaming-merge.md  2026-07-12-official-suite-gap.md  2026-07-13-catalog-scalability.md  2026-07-13-datafusion-upgrade-audit.md  materialized-columns.md  schema-management.md
docs/superpowers/plans/: 2026-07-05-ukiel-v1-catalog.md  2026-07-05-ukiel-v1-compactor.md  2026-07-05-ukiel-v1-ingest.md  2026-07-05-ukiel-v1-query.md  2026-07-05-ukiel-v1-roadmap.md  2026-07-06-ukiel-cache-tiering.md  2026-07-06-ukiel-catalog-stats-pruning.md  2026-07-06-ukiel-file-layout.md  2026-07-06-ukiel-guardrails.md  2026-07-06-ukiel-key-index.md  2026-07-06-ukiel-lsm-hierarchy.md  2026-07-06-ukiel-matcols.md  2026-07-06-ukiel-parquet-metadata-cache.md  2026-07-06-ukiel-safety-rails.md  2026-07-06-ukiel-scan-pushdown.md  2026-07-06-ukiel-upload-intent.md  2026-07-06-ukiel-v1-gc.md  2026-07-06-ukield-server.md  2026-07-07-ukiel-metrics-p1.md  2026-07-07-ukiel-pipelines.md  2026-07-08-ukiel-macro-perf.md  2026-07-08-ukiel-metrics-p2.md  2026-07-08-ukiel-review-hardening.md  2026-07-09-ukiel-ingest-sort-by-sort-key.md  2026-07-09-ukiel-official-bench-suites.md  2026-07-09-ukiel-streaming-merge.md  2026-07-12-ukiel-clickhouse-reference.md  2026-07-13-ukiel-ambiguous-mutation-reconciliation.md  2026-07-13-ukiel-catalog-aggregate-pushdown.md  2026-07-13-ukiel-catalog-bench.md  2026-07-13-ukiel-compaction-partition-leases.md  2026-07-13-ukiel-json-type-baseline.md  2026-07-13-ukiel-safe-catalog-recovery.md  2026-07-13-ukiel-stack-residual.md  2026-07-13-ukiel-utf8view.md  2026-07-14-ukiel-synthetic-posthog.md
docs/superpowers/specs/: 2026-07-05-ukiel-design.md  2026-07-05-ukiel-testing-design.md  2026-07-06-ukiel-monitoring.md  2026-07-06-ukiel-performance-testing.md  2026-07-13-ukiel-high-availability.md
