[workspace]
resolver = "2"
members = ["crates/ukiel-core", "crates/ukiel-catalog"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "migrate", "macros"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
ukiel-core = { path = "crates/ukiel-core" }
