[workspace]
resolver = "2"
members = ["crates/ukiel-core", "crates/ukiel-catalog", "crates/ukiel-ingest", "crates/ukiel-query", "crates/ukiel-compactor", "crates/ukiel-gc", "crates/ukiel-expr", "crates/ukield", "crates/ukiel-e2e"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "migrate", "macros"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
arrow = "58.3"
parquet = "58.3"
object_store = "0.13"
rdkafka = { version = "0.39", features = ["cmake-build", "tokio"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures = "0.3"
tokio-util = "0.7"
datafusion = "54"
axum = "0.8"
async-trait = "0.1"
url = "2"
tempfile = "3"
tracing = "0.1"
toml = "1"
anyhow = "1"
metrics = "0.24"
metrics-util = "0.19"
metrics-exporter-prometheus = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ukiel-core = { path = "crates/ukiel-core" }
ukiel-catalog = { path = "crates/ukiel-catalog" }
ukiel-ingest = { path = "crates/ukiel-ingest" }
ukiel-query = { path = "crates/ukiel-query" }
ukiel-compactor = { path = "crates/ukiel-compactor" }
ukiel-gc = { path = "crates/ukiel-gc" }
ukiel-expr = { path = "crates/ukiel-expr" }
ukield = { path = "crates/ukield" }

# Optimized release build (used by `--release`, incl. the macro perf bench and
# `ukield`). ThinLTO gives cross-crate inlining across the whole graph
# (datafusion/arrow/parquet included) while staying a *parallel* build — its
# cross-module optimization is multithreaded, and default codegen-units keeps
# per-crate codegen parallel too, unlike fat LTO + `codegen-units = 1` which
# serialize the final link. Runtime is within a few % of fat LTO.
# Portable: architecture-specific SIMD is opt-in via `-C target-cpu=native`
# (see bench/README.md), not baked in here.
[profile.release]
lto = "thin"
