[package]
name = "ukiel-catalog"
version.workspace = true
edition.workspace = true

[dependencies]
ukiel-core = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers-modules = { workspace = true }
