[package]
name = "ukiel-catalog"
version.workspace = true
edition.workspace = true

[features]
# Plan 43: a deterministic fault point at the commit boundary. Test builds only —
# there is no environment variable and no TOML key, so it cannot become an
# operator-reachable knob. Enabled from ukiel-e2e's dev-dependencies, which the
# resolver keeps out of `cargo build -p ukield`.
fault-injection = []

[dependencies]
ukiel-core = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
# Issue 0014's tests build the same roaring key set the writers do, so the decode
# path under test is the real one.
roaring = { workspace = true }
base64 = { workspace = true }
# The boundary seam's own tests need it armed.
ukiel-catalog = { path = ".", features = ["fault-injection"] }
tokio = { workspace = true }
testcontainers-modules = { workspace = true }
