[package]
name = "ukiel-compactor"
version.workspace = true
edition.workspace = true

[dependencies]
ukiel-core = { workspace = true }
ukiel-catalog = { workspace = true }
ukiel-expr = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ukiel-ingest = { workspace = true }
testcontainers-modules = { workspace = true }
sqlx = { workspace = true }
