[package]
name = "ukiel-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
thiserror = { workspace = true }
roaring = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
