[package]
name = "ukiel-e2e"
version.workspace = true
edition.workspace = true

# Test-only harness. The scenarios in `tests/` are `#[ignore]`d and run against
# the docker-compose stack (see docs/superpowers/specs/2026-07-05-ukiel-testing-design.md).

[dependencies]
ukiel-core = { workspace = true }
ukiel-catalog = { workspace = true }
ukiel-ingest = { workspace = true }
ukiel-query = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
rdkafka = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
