[package]
name = "ukiel-e2e"
version.workspace = true
edition.workspace = true

# Test-only harness. The scenarios in `tests/` are `#[ignore]`d and run against
# the docker-compose stack (see docs/superpowers/specs/2026-07-05-ukiel-testing-design.md).

[dependencies]
ukiel-core = { workspace = true }
ukiel-catalog = { workspace = true }
ukiel-ingest = { workspace = true }
ukiel-query = { workspace = true }
ukiel-compactor = { workspace = true }
ukiel-gc = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
rdkafka = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
# Macro perf bench binary (plan 30) — manual-only, never CI.
arrow = { workspace = true }
parquet = { workspace = true }
# Plan 32: the official suites run SQL directly on a SessionContext (ukiel's
# operator session, and a bare DataFusion one for the raw reference runner).
datafusion = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
anyhow = { workspace = true }
# Plan 40: the catalog bench seeds real plan-16 column_stats (roaring bitmaps,
# base64) so JSONB/TOAST width is honest rather than understated.
roaring = { workspace = true }
base64 = { workspace = true }
sqlx = { workspace = true }
flate2 = "1"

[[bin]]
name = "bench"
path = "src/bin/bench/main.rs"
