[package]
name = "ukiel-gc"
version.workspace = true
edition.workspace = true

[dependencies]
ukiel-core = { workspace = true }
ukiel-catalog = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
testcontainers-modules = { workspace = true }
