[package]
name = "ukiel-query"
version.workspace = true
edition.workspace = true

[dependencies]
ukiel-core = { workspace = true }
ukiel-catalog = { workspace = true }
ukiel-expr = { workspace = true }
datafusion = { workspace = true }
datafusion-datasource-parquet = { workspace = true }
lru = { workspace = true }
object_store = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tokio-util = { workspace = true }
ukiel-ingest = { workspace = true }
# Plan 16: the span test writes its fixture with the real key-aligned writer, so
# the file and the catalog spans cannot drift apart in the test.
ukiel-compactor = { workspace = true }
testcontainers-modules = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
parquet = { workspace = true }
